# lamp_laxus

./: README.md  Results - Laxus Sensitivity Analysis.csv  Results - Proposed Strategies vs Baseline.csv  lamp_laxus.ipynb  pyproject.toml  run_experiments.py
datasets/: dataset1.json  example1.json
dependencies/: edge_sim_py-0.1.0-py3-none-any.whl
simulator/: __main__.py  dataset_generator.py  dataset_generator_extensions.py  edge_server_extensions.py  maintenance.py  simulator_extensions.py
simulator/algorithms/: best_fit_like.py  first_fit_like.py  greedy_least_batch.py  lamp.py  laxus.py  salus.py  worst_fit_like.py
simulator/components_extensions/: service_extensions.py
