[tool.poetry]
name = "laxus"
version = "0.1.0"
description = "Location-Aware Infrastructure Updates at the Edge"
authors = ["Paulo Severo <opaulosevero@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
edge-sim-py = {path = "dependencies/edge_sim_py-0.1.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
