[tool.poetry]
name = "simulator"
version = "0.1.0"
description = "Location-Aware Maintenance Strategies for Edge Infrastructures"
authors = ["Paulo Severo <opaulosevero@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
edge-sim-py = {path = "dependencies/edge_sim_py-0.1.0-py3-none-any.whl"}
pymoo = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
